@@ -18,6 +18,7 @@
 * Renamed minLength to minlength, maxLength to maxlength and rangeLength to rangelength, deprecating the previous names (to be removed in 1.3)
 * Added feature to merge min + max into and range and minlength + maxlength into rangelength
 * Added support for dynamic rule parameters, allowing to specify a function as a parameter eg. for minlength, called when validating the element
+* Allow to specify null or an empty string as a message to display nothing (see marketo demo)
 
 1.1.2
 ---
